--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "This project get heartbeat data.",
   "main": "routes/index.js",
-  "directories": {
-  },
+  "directories": {},
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
@@ -15,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "ant-plus": "^0.1.24",
+    "axios": "^0.25.0",
     "ejs": "^3.1.6",
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.10.0",
@@ -24,11 +24,11 @@
     "point-of-view": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.13",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "rimraf": "^3.0.2",
     "tap": "^15.1.6",
-    "typescript": "^4.5.5",
-    "@types/node": "^17.0.13"
+    "typescript": "^4.5.5"
   }
 }
