--- a/src/package.json
+++ b/src/package.json
@@ -2,16 +2,19 @@
   "name": "mr_heartbeat",
   "version": "1.0.0",
   "description": "This project get heartbeat data.",
-  "main": "routes/index.js",
+  "main": "./index.js",
   "directories": {},
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
-    "start": "node ./dist/routes/index.js"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "yamaSerif",
   "license": "MIT",
+  "engines": {
+    "node": "<=14.15.3"
+  },
   "dependencies": {
     "ant-plus": "^0.1.24",
     "axios": "^0.25.0",
