--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,7 @@
   "author": "yamaSerif",
   "license": "MIT",
   "engines": {
-    "node": "<=14.15.3"
+    "node": "14.15.3"
   },
   "dependencies": {
     "ant-plus": "^0.1.24",
