--- a/src/package.json
+++ b/src/package.json
@@ -23,7 +23,7 @@
     "fastify-autoload": "^3.10.0",
     "fastify-cli": "^2.15.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-sensible": "^3.1.2",
+    "@fastify/sensible": "^4.1.0",
     "point-of-view": "^5.0.0"
   },
   "devDependencies": {
